Add dependencies beetwen projects

--- a/UserCollection.Services.Database/UserCollection.Services.Database.csproj
+++ b/UserCollection.Services.Database/UserCollection.Services.Database.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UserCollection.Services\UserCollection.Services.csproj" />
+  </ItemGroup>
+
 </Project>
