--- a/UserCollection.Services.WebAPI/UserCollection.Services.WebAPI.csproj
+++ b/UserCollection.Services.WebAPI/UserCollection.Services.WebAPI.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UserCollection.Services\UserCollection.Services.csproj" />
+    <ProjectReference Include="..\UserCollection.WebAPI.Models\UserCollection.WebAPI.Models.csproj" />
+  </ItemGroup>
+
 </Project>
