--- a/UserCollection.WebAPP/appsettings.json
+++ b/UserCollection.WebAPP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UserCollection.WebAPP-a5353869-cf04-4c64-b75c-c0216e267e8f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-DVF3RUT;Database=Users;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
