--- a/UserCollection.WebAPI/appsettings.json
+++ b/UserCollection.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Collection": "Server=(localdb)\\MSSQLLocalDB;;Database=UserCollection;MultipleActiveResultSets=true"
+  }
 }
