--- a/UserCollection.WebAPI/UserCollection.WebAPI.csproj
+++ b/UserCollection.WebAPI/UserCollection.WebAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.27">
       <PrivateAssets>all</PrivateAssets>
@@ -16,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UserCollection.Common\UserCollection.Common.csproj" />
     <ProjectReference Include="..\UserCollection.Services.Database\UserCollection.Services.Database.csproj" />
     <ProjectReference Include="..\UserCollection.Services\UserCollection.Services.csproj" />
     <ProjectReference Include="..\UserCollection.WebAPI.Models\UserCollection.WebAPI.Models.csproj" />
