Connect DB to remote server

--- a/UserCollection.WebAPI/appsettings.json
+++ b/UserCollection.WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Collection": "Server=(localdb)\\MSSQLLocalDB;;Database=UserCollection;MultipleActiveResultSets=true"
+    "Collection": "workstation id=UserCollections.mssql.somee.com;packet size=4096;user id=OKSID123_SQLLogin_1;pwd=fetqtwy4wu;data source=UserCollections.mssql.somee.com;persist security info=False;initial catalog=UserCollections;TrustServerCertificate=True"
   }
 }
